--- a/frontend/admin/tournament.html
+++ b/frontend/admin/tournament.html
@@ -5,6 +5,151 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Управление турниром</title>
     <link rel="stylesheet" href="css/admin.css">
+    <style>
+        .player-tag {
+            background: var(--bg-secondary);
+            padding: 6px 10px;
+            border-radius: 6px;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            font-size: 14px;
+        }
+
+        .player-tag button {
+            background: none;
+            border: none;
+            color: #EF4444;
+            cursor: pointer;
+            font-size: 16px;
+            padding: 0;
+        }
+
+        .form-input {
+            width: 100%;
+            padding: 8px 10px;
+            border-radius: 8px;
+            border: 1px solid rgba(148,163,184,0.5);
+            background: #020617;
+            color: #E5E7EB;
+            font-size: 14px;
+        }
+
+        .form-input::placeholder {
+            color: #6B7280;
+        }
+
+        .player-search-results {
+            max-height: 260px;
+            overflow-y: auto;
+            border-radius: 8px;
+            border: 1px solid rgba(148,163,184,0.4);
+            background: #020617;
+            margin-top: 6px;
+        }
+
+        .player-search-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 6px 10px;
+            font-size: 14px;
+            border-bottom: 1px solid rgba(31,41,55,0.8);
+        }
+
+        .player-search-item:last-child {
+            border-bottom: none;
+        }
+
+        .player-search-name {
+            color: #E5E7EB;
+        }
+
+        .player-search-meta {
+            color: #9CA3AF;
+            font-size: 12px;
+            margin-left: 6px;
+        }
+
+        .player-search-add {
+            border: none;
+            border-radius: 6px;
+            background: #22C55E;
+            color: #0F172A;
+            font-weight: 600;
+            font-size: 13px;
+            padding: 4px 10px;
+            cursor: pointer;
+        }
+
+        .player-search-empty {
+            padding: 8px 10px;
+            font-size: 13px;
+            color: #9CA3AF;
+        }
+
+        .players-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+        }
+
+        .modal {
+            position: fixed;
+            inset: 0;
+            background: rgba(15, 23, 42, 0.7);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+            padding: 16px;
+        }
+
+        .modal.active {
+            display: flex;
+        }
+
+        .modal-content {
+            background: #0f172a;
+            border-radius: 12px;
+            max-width: 520px;
+            width: 100%;
+            box-shadow: 0 20px 40px rgba(15,23,42,0.5);
+            border: 1px solid rgba(148,163,184,0.2);
+        }
+
+        .modal-header {
+            padding: 16px 20px;
+            border-bottom: 1px solid rgba(148,163,184,0.2);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .modal-header h3 {
+            margin: 0;
+            font-size: 18px;
+        }
+
+        .modal-body {
+            padding: 16px 20px 20px;
+        }
+
+        .close-btn {
+            background: none;
+            border: none;
+            color: #9CA3AF;
+            font-size: 22px;
+            cursor: pointer;
+            padding: 0;
+        }
+
+        @media (max-width: 640px) {
+            .modal-content {
+                max-width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -47,10 +192,6 @@
         </div>
     </div>
 
-<script src="js/ui.js"></script>    
-<script src="js/api.js"></script>
-<script src="js/tournament.js"></script>
-
     <!-- Модальное окно управления игроками -->
     <div id="managePlayersModal" class="modal">
       <div class="modal-content">
@@ -59,12 +200,18 @@
           <button class="close-btn" id="closePlayersModal">&times;</button>
         </div>
         <div class="modal-body">
-          <!-- Добавление игроков -->
+          <!-- Поиск и добавление игроков -->
           <div style="margin-bottom: 24px;">
             <label style="display: block; margin-bottom: 8px; font-weight: 600;">Добавить игрока:</label>
-            <select id="addPlayerSelect" class="form-input" style="width: 100%;">
-              <option value="">Выберите игрока</option>
-            </select>
+            <input
+              type="text"
+              id="playerSearchInput"
+              class="form-input"
+              placeholder="Начните вводить ник или часть ника..."
+              autocomplete="off">
+            <div id="playerSearchResults" class="player-search-results">
+              <!-- Строки поиска -->
+            </div>
           </div>
           
           <!-- Список игроков турнира -->
@@ -78,5 +225,8 @@
       </div>
     </div>
 
+<script src="js/ui.js"></script>    
+<script src="js/api.js"></script>
+<script src="js/tournament.js"></script>
 </body>
 </html>
